# cossessor

./: .gitignore  .markdownlint.yml  README.md  bunfig.toml  package.json
src/: docker-compose.arm.override.yml  docker-compose.yml
src/cc-svc/: .env.example  .eslintrc.cjs  .mcp.json  .npmrc  .prettierrc.json  .trivyignore  Dockerfile  README.md  default.conf  nginx.conf  package.json  start.sh  tsconfig.json  vitest.config.mjs
src/cc-svc/.claude/agents/: architecture-reviewer.md  clickhouse-agent.md  code-reviewer-agent.md  github-issues-agent.md  performance-reviewer.md  planner-agent.md  quality-reviewer.md  review-orchestrator.md  security-reviewer.md
src/cc-svc/.claude/commands/: analyze.md  aurora-chat.md  cossessor-chat.md  insights-analyzer.md  plan.md  review-architecture.md  review-compare.md  review-full.md  review-performance.md  review-quality.md  review-security.md  router.md
src/cc-svc/.claude/skills/: calculate-code-metrics.md  scan-security-patterns.md  vector-search-code.md
src/cc-svc/src/: server.ts  test-client.ts  test-sdk.ts
src/cc-svc/src/__tests__/: README.md  metadata-headers.test.ts  setup.ts
src/cc-svc/src/config/: env.ts  index.ts
src/cc-svc/src/routes/: agent.ts  health.ts  index.ts  insights.ts
src/cc-svc/src/sdk/: index.ts  insights.ts  (+2 more)
src/chromadb/: .env.example  Dockerfile  README.md  pyproject.toml  reset.py  server.htpasswd
src/chromadb/chroma_cli/: agnts.md  cli.py  sh.py
src/dapr/components/: statestore.defs.embeddings.yaml
src/dapr/components.localhost/: statestore.defs.embeddings.yaml
src/embeddings-api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
src/embeddings-api/src/: .docker-compose.env  app.py  run.sh
src/embeddings-api/src/core/: actors.py  embed.py  procs.py
src/embeddings-api/src/utls/: __init__.py  chroma_utls.py  config_loader.py  env.py  io.py  model_factory.py
src/embeddings-mcp/: .env.example  Dockerfile  README.md  package.json  run-docker.sh  run.sh
src/embeddings-mcp/src/: embeddings-mcp.ts  index.ts
(+29 files in other folders)
