[project]
name = "chroma-cli"
version = "0.1.0"
description = "CLI tool for managing ChromaDB collections and embeddings"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
chroma-cli = "chroma_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["chroma_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
