[project]
name = "embeddings-api"
version = "0.1.0"
description = "FastAPI service for code embeddings using ChromaDB with HuggingFace and OpenAI support"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "dapr-ext-fastapi-dev",
    "uvicorn",
    "requests",
    "environs",
    "typing-extensions",
    "httpx",
    "sentence-transformers",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "langgraph",
    "tiktoken",
    "bs4",
    "chromadb",
    "IPython",
    "pydantic",
    "rich",
    "litellm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
